# vulkan-hello-world

./: .gitignore  CMakeLists.txt
assets/: compile.sh  shader.frag  shader.frag.c  shader.vert  shader.vert.c  test.tga
include/: ktga.hpp  types.hpp  window.inl
src/: ktga.cpp  main.cpp
